[gd_scene load_steps=11 format=2]

[ext_resource path="res://menus/await_turn.gd" type="Script" id=1]
[ext_resource path="res://menus/MenuBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menus/LineEditJS/LineEditJS.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://util/CurrentPlayer.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[node name="AwaitTurn" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuBase" parent="." instance=ExtResource( 2 )]

[node name="chair0000" parent="MenuBase" index="4"]
visible = true

[node name="BackButton" parent="MenuBase" index="6"]
visible = true

[node name="Title" type="Label" parent="."]
self_modulate = Color( 0, 0.776471, 0.121569, 1 )
margin_left = 80.0
margin_top = 66.0
margin_right = 399.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "Awaiting Turn"
align = 1
autowrap = true

[node name="IntroTextBG" type="ColorRect" parent="."]
margin_left = 70.0
margin_top = 100.0
margin_right = 414.0
margin_bottom = 140.0
color = Color( 0.137255, 0.172549, 0.192157, 1 )

[node name="Label" type="Label" parent="IntroTextBG"]
margin_left = 13.0
margin_top = 11.0
margin_right = 344.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Share the following continuation code with the other player:"
autowrap = true

[node name="OutputCodeBG" type="ColorRect" parent="."]
margin_left = 70.0
margin_top = 140.0
margin_right = 414.0
margin_bottom = 180.0
color = Color( 0.321569, 0.454902, 0.52549, 1 )

[node name="OutputCode" type="LineEdit" parent="OutputCodeBG"]
margin_right = 344.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "ABCD"
align = 1
editable = false
script = ExtResource( 4 )

[node name="InfoTextBG" type="ColorRect" parent="."]
margin_left = 70.0
margin_top = 186.0
margin_right = 414.0
margin_bottom = 247.0
color = Color( 0.137255, 0.172549, 0.192157, 1 )

[node name="Label2" type="Label" parent="InfoTextBG"]
margin_left = 13.0
margin_top = 3.5
margin_right = 332.0
margin_bottom = 54.5
custom_fonts/font = SubResource( 2 )
text = "Wait for the other player to complete their turn. Upon completion, they should send you a \"continuation code\". Copy that code down here and click the button to continue."
autowrap = true

[node name="ErrorTextBG" type="ColorRect" parent="."]
margin_left = 70.0
margin_top = 250.0
margin_right = 414.0
margin_bottom = 267.0
color = Color( 0.545098, 0.027451, 0.231373, 1 )

[node name="Label" type="Label" parent="ErrorTextBG"]
margin_right = 344.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "ERROR:"
align = 1
valign = 1
autowrap = true

[node name="InputCode" type="LineEdit" parent="."]
margin_left = 70.0
margin_top = 271.0
margin_right = 414.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 20
placeholder_text = "continuation code"
placeholder_alpha = 0.3
script = ExtResource( 4 )
instruction = "Please enter your continuation code:"

[node name="Continue" type="Button" parent="."]
margin_left = 190.0
margin_top = 318.0
margin_right = 300.0
margin_bottom = 351.0
text = "Continue"

[node name="aibot" type="Sprite" parent="."]
position = Vector2( 34.5, 304.25 )
scale = Vector2( 0.796875, 0.757812 )
texture = ExtResource( 5 )

[node name="AIBot" type="Button" parent="."]
margin_left = 9.0
margin_top = 326.0
margin_right = 61.0
margin_bottom = 346.0
text = "AI Bot"

[node name="Debugging" type="Node2D" parent="."]

[node name="CurrentPlayer" parent="Debugging" instance=ExtResource( 6 )]
position = Vector2( 310, 10 )

[node name="ChangePlayer" type="Button" parent="Debugging"]
margin_left = 310.0
margin_top = 318.0
margin_right = 411.0
margin_bottom = 338.0
text = "Change Player"

[node name="StateEdit" type="Button" parent="Debugging"]
margin_left = 320.0
margin_top = 337.5
margin_right = 410.0
margin_bottom = 357.5
text = "State Editor"
[connection signal="text_entered" from="InputCode" to="." method="_on_InputCode_text_entered"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Debugging/ChangePlayer" to="." method="_on_ChangePlayer_pressed"]
[connection signal="pressed" from="Debugging/StateEdit" to="." method="_on_StateEdit_pressed"]

[editable path="MenuBase"]
